# c-rust-integration

./: .gitignore  README.md
code_orig/integration_examples/c_code/: build.sh
code_orig/integration_examples/c_code/include/: mylibrary.h
code_orig/integration_examples/c_code/src/: main.c
code_orig/integration_examples/rust_code/: Cargo.toml
code_orig/integration_examples/rust_code/src/: lib.rs
code_orig/integration_examples/rust_code/src/utillib/: mod.rs
code_orig/rust_queue_check/c_code/: build.sh
code_orig/rust_queue_check/c_code/include/: mylibrary.h
code_orig/rust_queue_check/c_code/src/: main.c
code_orig/rust_queue_check/rust_code/src/: lib.rs
code_orig/rust_queue_check/rust_code/src/utillib/: mod.rs
code_orig/utils_rust/src/: lib.rs
code_orig/utils_rust/src/utillib/: mod.rs
doc/: Errors_avoided
microps_integration/microps/: Makefile  arp.c  icmp.c  icmp.h  ip.c
microps_integration/microps_integrated/: Makefile  icmp.c  net.c  rust_functions.h  tcp.c  udp.c  util.c
microps_integration/utils_rust/: Cargo.toml
microps_integration/utils_rust/src/: lib.rs
microps_integration/utils_rust/src/utillib/: mod.rs
