[package]
name = "rustproject"
version = "0.1.0"
edition = "2021"

[lib]
# name = "addlib"
name = "utillib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
time = "0.3.30"
powerfmt = "0.2.0"  # Use a compatible version
queue = "0.3.2-final"
libc = "0.2"